# derek-agent

./: .gitignore  CLAUDE.md  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  test_mcp_optimization.py  test_security_improvements.py
.windsurf/rules/: agents.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: go.md  html-css.md  javascript.md  typescript.md
conductor/tracks/testing_20260418/: metadata.json  plan.md  spec.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_compression_fields.py
script/: server
src/: __init__.py
src/cli/: __init__.py  models_cmd.py  tools_cmd.py
src/core/: __init__.py  agent_manager.py  agent_runner.py  compression_manager.py  config.py  mcp_client.py  providers.py  skill_registry.py  skills.py
src/interface/: __init__.py  app.py
src/interface/commands/: __init__.py  base.py  commands.py  mcp_command.py  memories_command.py  registry.py  skills_command.py
src/interface/screens/: __init__.py  agent_select.py  chat_screen.py  (+1 more)
src/skills/: __init__.py
src/storage/: __init__.py  async_sqlalchemy_storage.py  base.py  database.py  migrations.py  models.py  sqlalchemy_storage.py  sqlite.py
src/tools/: __init__.py  calculator.py  crawler.py  file.py  grep.py  python.py  reasoning.py  secure_file_tools.py  secure_grep_tools.py  secure_shell_tools.py  shell.py  web_search.py
tests/: __init__.py  test_file_based_skills.py  test_imports.py  test_skills_command.py  test_storage_migration.py  test_token_status.py
(+6 files in other folders)
