[project]
name = "derek-agent"
version = "0.1.0"
description = "An Agent Runner based on Agno Framework with TUI interface"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=1.0.0",
    "textual>=0.86.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "platformdirs>=4.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "mcp>=1.0.0",
    "ddgs>=9.14.0",
]

[project.scripts]
derek-agent = "main:main"
