[project]
name = "derek-agent"
version = "0.1.0"
description = "An Agent Runner based on Agno Framework with TUI interface"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=1.0.0",
    "textual>=0.86.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "platformdirs>=4.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "mcp>=1.0.0",
    "ddgs>=9.14.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.16.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
derek-agent = "main:main"
